--- a/Classes/View/WordPress/Element/WPPostContentHeaderElementCell.xib
+++ b/Classes/View/WordPress/Element/WPPostContentHeaderElementCell.xib
@@ -101,7 +101,7 @@
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
-					<bytes key="NSRGB">MSAxIDEAA</bytes>
+					<bytes key="NSRGB">MC44NTA5ODAzOTIyIDAuNDc0NTA5ODAzOSAwLjAwNzg0MzEzNzI1NQA</bytes>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUISelectionStyle">0</int>
