--- a/Classes/View/WordPress/Element/WPPostContentParagraphElementCell.xib
+++ b/Classes/View/WordPress/Element/WPPostContentParagraphElementCell.xib
@@ -39,7 +39,6 @@
 						<int key="NSvFlags">256</int>
 						<string key="NSFrameSize">{320, 59}</string>
 						<reference key="NSSuperview" ref="506599320"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -58,7 +57,7 @@
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
-					<bytes key="NSRGB">MSAxIDEAA</bytes>
+					<bytes key="NSRGB">MC41NDUwOTgwMzkyIDAuNDE5NjA3ODQzMSAwLjYzOTIxNTY4NjMAA</bytes>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUISelectionStyle">0</int>
