Added licenses. Changed dark theme to light theme, improved eventbrite list view, ...

--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -53,9 +53,12 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" barStyle="black" id="WOt-fn-ntY">
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="WOt-fn-ntY">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <textInputTraits key="textInputTraits"/>
                         </searchBar>
                     </tableView>
@@ -734,13 +737,13 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jx7-Tp-kiD" userLabel="View count view">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
                                         <subviews>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="613" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d58-TZ-UWt" userLabel="View count label">
-                                                <rect key="frame" x="253" y="7" width="63" height="31"/>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="613" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d58-TZ-UWt" userLabel="View count label">
+                                                <rect key="frame" x="203" y="7" width="98" height="31"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="63" id="etQ-su-zB2"/>
+                                                    <constraint firstAttribute="width" constant="98" id="87G-di-Us9"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
-                                                <color key="textColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Vues" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uGJ-fb-yx9" userLabel="View description label">
@@ -750,30 +753,30 @@
                                                     <constraint firstAttribute="width" constant="51" id="Z3j-56-OHa"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="uGJ-fb-yx9" firstAttribute="leading" secondItem="jx7-Tp-kiD" secondAttribute="leading" constant="5" id="3i8-c6-St2"/>
                                             <constraint firstItem="d58-TZ-UWt" firstAttribute="bottom" secondItem="uGJ-fb-yx9" secondAttribute="bottom" type="default" id="B7I-gc-Rft"/>
-                                            <constraint firstItem="uGJ-fb-yx9" firstAttribute="centerY" secondItem="jx7-Tp-kiD" secondAttribute="centerY" type="default" id="hTr-Gb-Wbv"/>
+                                            <constraint firstItem="d58-TZ-UWt" firstAttribute="centerY" secondItem="jx7-Tp-kiD" secondAttribute="centerY" type="default" id="Wgs-HF-34F"/>
+                                            <constraint firstAttribute="trailing" secondItem="d58-TZ-UWt" secondAttribute="trailing" constant="19" id="i8b-a3-yFk"/>
                                             <constraint firstItem="d58-TZ-UWt" firstAttribute="top" secondItem="uGJ-fb-yx9" secondAttribute="top" type="default" id="iTw-pW-tkU"/>
-                                            <constraint firstItem="d58-TZ-UWt" firstAttribute="leading" secondItem="jx7-Tp-kiD" secondAttribute="leading" constant="253" id="imb-WG-xkO"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xUY-73-zOe" userLabel="Like count view">
                                         <rect key="frame" x="0.0" y="45" width="320" height="45"/>
                                         <subviews>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gzt-KT-TsR" userLabel="Like count label">
-                                                <rect key="frame" x="253" y="6" width="63" height="31"/>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gzt-KT-TsR" userLabel="Like count label">
+                                                <rect key="frame" x="239" y="6" width="63" height="31"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="31" id="arp-TV-aGX"/>
                                                     <constraint firstAttribute="width" constant="63" id="hWa-9o-LEq"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
-                                                <color key="textColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Likes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="65J-g6-bqr" userLabel="Like description label">
@@ -783,28 +786,28 @@
                                                     <constraint firstAttribute="width" constant="50" id="WIQ-uE-e5e"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="gzt-KT-TsR" firstAttribute="top" secondItem="xUY-73-zOe" secondAttribute="top" constant="6" id="9er-vB-OXM"/>
                                             <constraint firstItem="65J-g6-bqr" firstAttribute="centerY" secondItem="xUY-73-zOe" secondAttribute="centerY" type="default" id="J8o-vP-RnK"/>
+                                            <constraint firstAttribute="trailing" secondItem="gzt-KT-TsR" secondAttribute="trailing" constant="18" id="fFG-6f-P2s"/>
                                             <constraint firstItem="65J-g6-bqr" firstAttribute="leading" secondItem="xUY-73-zOe" secondAttribute="leading" constant="6" id="gUY-HG-IHG"/>
-                                            <constraint firstAttribute="trailing" secondItem="gzt-KT-TsR" secondAttribute="trailing" constant="4" id="nkY-ke-2L0"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ct0-d1-3Xj" userLabel="Comment count view">
                                         <rect key="frame" x="0.0" y="90" width="320" height="45"/>
                                         <subviews>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="8" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sLi-GY-H7t" userLabel="Comment count label">
-                                                <rect key="frame" x="253" y="7" width="63" height="31"/>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="8" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sLi-GY-H7t" userLabel="Comment count label">
+                                                <rect key="frame" x="238" y="7" width="63" height="31"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="63" id="hkJ-uf-wX1"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
-                                                <color key="textColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Commentaires" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibc-R3-dzN" userLabel="Comment description label">
@@ -814,16 +817,16 @@
                                                     <constraint firstAttribute="width" constant="111" id="rvj-dh-1ZL"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="ibc-R3-dzN" firstAttribute="leading" secondItem="ct0-d1-3Xj" secondAttribute="leading" constant="5" id="BjM-ut-nJf"/>
-                                            <constraint firstItem="sLi-GY-H7t" firstAttribute="leading" secondItem="ct0-d1-3Xj" secondAttribute="leading" constant="253" id="RS9-oZ-HoG"/>
                                             <constraint firstItem="ibc-R3-dzN" firstAttribute="bottom" secondItem="sLi-GY-H7t" secondAttribute="bottom" type="default" id="W0H-Wb-7A1"/>
                                             <constraint firstItem="ibc-R3-dzN" firstAttribute="top" secondItem="sLi-GY-H7t" secondAttribute="top" type="default" id="eav-b6-Bio"/>
+                                            <constraint firstAttribute="trailing" secondItem="sLi-GY-H7t" secondAttribute="trailing" constant="19" id="gFg-5h-Ukt"/>
                                             <constraint firstItem="sLi-GY-H7t" firstAttribute="centerY" secondItem="ct0-d1-3Xj" secondAttribute="centerY" type="default" id="wWX-fk-yGi"/>
                                         </constraints>
                                     </view>
@@ -846,7 +849,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.15686274509803921" green="0.15686274509803921" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="8iV-0n-5gL" firstAttribute="top" secondItem="jz8-7g-YcJ" secondAttribute="bottom" type="user" id="1SW-4I-YEY"/>
                             <constraint firstItem="8iV-0n-5gL" firstAttribute="leading" secondItem="SjP-kM-g1E" secondAttribute="leading" type="user" id="2vn-ZH-Tlp"/>
